# sgtk

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh
benches/: canonical.rs  embedding.rs  planar.rs  toroidal.rs
examples/: test.rs
f4m/: Cargo.toml  all-new.txt
f4m/src/: editsearch.rs  lib.rs  splitdel.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
logo/: logo.tex
src/: bitset.rs  embedding.rs  enumeration.rs  graph.rs  iso.rs  lib.rs  map.rs  parse.rs  permutation.rs  planar.rs  planar_old.rs  prelude.rs  random.rs  seq.rs  slotmap.rs  smallvec.rs  toroidal.rs  viz.rs
src/graph/: avx2.rs
tests/: canonical.rs  enumeration.rs
