[package]
name = "sgtk"
version = "0.1.0"
authors = ["Birk Tjelmeland <git@birktj.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "canonical"
harness = false

[[bench]]
name = "planar"
harness = false

[profile.release]
debug = 1
