[package]
name = "f4m"
version = "0.1.0"
authors = ["Birk Tjelmeland <git@birktj.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgtk = { path = "../" }
anyhow = "1.0"
structopt = "0.3"
indicatif = "0.15"
console = "0.14"
